--- a/app/src/main/res/layout/dashboard_card_view.xml
+++ b/app/src/main/res/layout/dashboard_card_view.xml
@@ -15,81 +15,85 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="20dp">
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:layout_marginTop="410dp"
-                android:layout_marginStart="30dp"/>
-
-            <ImageView
-                android:id="@+id/img_person"
-                android:layout_width="25dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_person"
-                android:tint="@color/white"
-                tools:ignore="UseAppTint"
-                android:layout_toStartOf="@+id/tv_name"
-                android:layout_marginEnd="-20dp"
-                android:layout_marginTop="405dp"/>
-
-            <TextView
-                android:id="@+id/tv_agency"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_name"
-                android:text="Agency"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="30dp"/>
-
-            <ImageView
-                android:id="@+id/img_agency"
-                android:layout_width="25dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_agency"
-                app:tint="@color/white"
-                android:layout_marginTop="440dp"
-                android:layout_toStartOf="@+id/tv_agency"
-                android:layout_marginEnd="-20dp"/>
-
-            <TextView
-                android:id="@+id/tv_wikipedia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_agency"
-                android:text="Link"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="30dp"/>
-
-            <ImageView
-                android:id="@+id/img_wiki"
-                android:layout_width="25dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_wiki"
-                app:tint="@color/white"
-                android:layout_marginTop="472dp"
-                android:layout_toStartOf="@+id/tv_wikipedia"
-                android:layout_marginEnd="-20dp"/>
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/img_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:maxHeight="500dp"
+                android:scaleType="centerCrop" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_loading"/>
+                android:orientation="horizontal"
+                android:layout_marginStart="10dp"
+                android:layout_alignBottom="@+id/img_view"
+                android:layout_marginBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/ic_person"
+                        app:tint="@color/white"/>
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/ic_agency"
+                        app:tint="@color/white"/>
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/ic_wiki"
+                        app:tint="@color/white"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="10dp">
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="18dp"/>
+                    <TextView
+                        android:id="@+id/tv_agency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_name"
+                        android:text="Agency"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="18dp"/>
+                    <TextView
+                        android:id="@+id/tv_wikipedia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_agency"
+                        android:text="Link"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:autoLink="web"
+                        android:textColorLink="@color/white"
+                        android:textSize="18dp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
